<resources>
    <string name="app_name">ChromaPal</string>
    <string name="diagButton">Take Diagnostic</string>
    <string name="imgAnalysis">Image Analysis</string>
    <string name="restitle">Results</string>
    <string name="resContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at dui scelerisque, laoreet dolor sit amet, dignissim risus. Sed porttitor varius pulvinar. Suspendisse pharetra id lectus a euismod. Integer tincidunt ullamcorper neque, at auctor nibh varius vel. Ut lobortis eros id tellus facilisis, ac dignissim augue rutrum. Nulla facilisi. Ut hendrerit sagittis venenatis. Praesent in ante in ligula imperdiet semper. Morbi consectetur neque quis lectus lacinia, tristique tincidunt nisi suscipit. </string>
    <string name="uploadButton">Export Results</string>
    <string name="camButton">Test Camera</string>
    <string name="return_home_button">Return Home</string>
    <string name="next">Next</string>
    <string name="startTest">Start Test</string>
    <string name="before">Before</string>
    <string name="instructions">Instructions</string>
    <string name="OK">OK</string>
    <string name="camera">Camera</string>
    <string name="photos">Photos</string>
    <string name="results_saved">These results have been saved.</string>
    <string name="missing_diagnostic_results">No saved diagnostic results. Please take the diagnostic test.</string>
    <string name="swipe_between">swipe between original and filtered image</string>

    <string name="general_app_instructions">
        Press the “Diagnostic Test” button to take a test that will determine your color blindness.  This will then tell
        you which color filter you should apply.

        \n\nPress the “Camera” button and take a picture of the real world.  The app will automatically apply the appropriate
        color filter.  Swipe left and right to view the original image or the color-filtered image. Tap anywhere on the image
        to get the true color at that location.

        \n\nPress the “Photos” button to browse through images currently on your phone.  Once an image is selected, the app
        will automatically apply the appropriate color filter.  Swipe left and right to view the original image or the
        color-filtered image. Tap anywhere on the image to get the true color at that location.
    </string>

    <string name="diagnostic_test_instructions">
        The F-M 100 color test consists of 4 screens each with 22 different color plates.  On each screen, colored
        plates are randomly arranged with the first and last plate set correctly as anchor points. The goal is to
        rearrange the plates to make a smooth gradient. Tap on two plates to swap their locations. When you are done
        with a screen, press the “Next” button.
    </string>

    <string name="diagnostic_test_results_text_view_text">Your diagnostic test results:</string>

    <string name="diagnostic_test_results_1">dg_results1</string>
    <string name="diagnostic_test_results_2">dg_results2</string>
    <string name="diagnostic_test_results_3">dg_results3</string>
    <string name="diagnostic_test_results_4">dg_results4</string>

    <string name="red_error">red_error</string>
    <string name="green_error">green_error</string>
    <string name="blue_error">blue_error</string>
</resources>
