<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restitle"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/resContent"
        android:padding="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/camButton" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/uploadButton"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>
</LinearLayout>