<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diagnostic_test_instructions"
        android:padding="30dp"
        android:textSize="16sp"/>

    <Button android:id="@+id/diagnostic_instructions_start_test_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/startTest"
        android:textColor="@color/buttonText"
        android:background="@drawable/rounded_button"
        android:layout_gravity="center_horizontal|center"/>

</LinearLayout>